--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - MYSQL_PASSWORD=${DATABASE_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
     ports:
-      - "3306:3307"
+      - "3307:3306"
     volumes:
       - ./database/data:/var/lib/mysql
 
@@ -24,13 +24,13 @@ services:
       - APP_SECRET=${APP_SECRET}
       - DATABASE_URL=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@database:3306/${DATABASE_NAME}?serverVersion=8.0
     volumes:
-      - ../src:/var/www
+      - ./src:/var/www
 
   nginx:
     build:
       context: ./nginx
     volumes:
-      - ../src:/var/www
+      - ./src:/var/www
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/sites/:/etc/nginx/sites-available
       - ./nginx/conf.d/:/etc/nginx/conf.d
